# NDMA

./: pyproject.toml
pkg/ndma/: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
pkg/ndma/.github/: ISSUE_TEMPLATE.md
pkg/ndma/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pkg/ndma/src/ndma/: __init__.py
pkg/ndma/tests/: test_ndma.py
tests/: __init__.py
