[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndma"
version = "0.1.0"
description = "A flexible Python library for analysis of network dynamical system models"
readme = "README.rst"
authors = [
  {name = "Pierre Navaro", email = "pierre.navaro@math.cnrs.fr"}
]
maintainers = [
  {name = "Pierre Navaro", email = "pierre.navaro@math.cnrs.fr"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/pnavaro/ndma/issues"
changelog = "https://github.com/pnavaro/ndma/blob/master/changelog.md"
homepage = "https://github.com/pnavaro/ndma"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

